<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ml_transforms</name>
  <version>0.1.0</version>
  <description>
    Minimal, dependency-light library for robust homogeneous transform math
    (SE3 builds, composition, inversion, quaternion ↔ rotation matrix conversion)
    and pixel↔ray stubs for WP2. Part of the BAM ml_pkgs suite.
  </description>

  <maintainer email="newtonh20@ieee.org">Newton Campbell</maintainer>
  <license>NASA Open Source Agreement 1.3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime: only numpy; no rclpy node runtime needed for the pure library -->
  <exec_depend>python3-numpy</exec_depend>

  <!-- Test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
