<?xml version="1.0"?>
<package format="3">
  <name>ml_transforms</name>
  <version>0.1.0</version>
  <description>Dependency-light ROS 2 Jazzy C++ transform math library for Baseball Avoidance Multirotor ML relative pose workflows.</description>

  <maintainer email="bam-dev@example.com">BAM Dev Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>eigen3_cmake_module</build_depend>
  <build_depend>Eigen3</build_depend>
  <exec_depend>eigen3_cmake_module</exec_depend>
  <exec_depend>Eigen3</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
